# esp32-s3-touch-lcd-2-investigation

./: .gitignore  DOCUMENTATION_INDEX.md  README.md  serial_monitor.py
.github/: IMPLEMENTATION_STATUS.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PROJECT_PLAN.md  SESSION_REPORT.md  TASK_TRACKER.md  TECHNICAL_SPEC.md  copilot-instructions.md
.github/workflows/: build.yml
battery/: CMakeLists.txt  partitions.csv  sdkconfig
battery/main/: CMakeLists.txt  display.c  display.h  main.c  one.c  (+10 more)
step-counter/: CMakeLists.txt  README.md  idf_component.yml  led.cpp  led.h  logger.cpp  logger.h  ntp-time.cpp  ntp-time.h  ota.cpp  ota.h  partitions.csv  sdkconfig  step-counter.ino  steps.cpp  steps.h  util.cpp  util.h  websocket.cpp  websocket.h  wifi.cpp  wifi.h
stepper/: CMakeLists.txt  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults
stepper/main/: CMakeLists.txt  app_state.c  app_state.h  idf_component.yml  main.c
stepper/main/core/: step_counter.c  step_counter.h  storage_manager.c  storage_manager.h  ws_protocol.c  ws_protocol.h
stepper/main/drivers/: battery_monitor.c  battery_monitor.h  display_driver.c  display_driver.h
stepper/main/network/: captive_portal.c  captive_portal.h  ntp_sync.c  ntp_sync.h  ota_updater.c  ota_updater.h  websocket_client.c  websocket_client.h  wifi_manager.c  wifi_manager.h  ws_protocol.h
stepper/main/ui/: qr_display.c  qr_display.h  ui_common.c  ui_common.h  ui_manager.c  ui_manager.h  ui_setup.c  ui_setup.h  ui_step_mode.c  ui_step_mode.h
stepper/main/web/: portal_routes.c  portal_routes.h
(+18 files in other folders)
